Wiring Harness   - review and update wire data spreadsheet with Pierre-Lucas   - review and update schematic to track spreadsheet
misc
  - updated gitignore to ignore libreoffice locks

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 # on your computer.
 # comment the following line if you want to have your project file included.
 eagle.epf
+
+# ignore libreoffice lock files
+.~lock.*
